@@ -1,30 +1,0 @@
-﻿using System;
-using System.ComponentModel;
-using System.Globalization;
-using FlatFile.FixedWidth.Interfaces;
-
-namespace FlatFile.FixedWidth.Implementation.TypeConverters
-{
-    public class ByteTypeConverter : TypeConverter, ITypeConverter
-    {
-        public override bool CanConvertFrom(ITypeDescriptorContext context, Type sourceType)
-        {
-            return sourceType == typeof(string) || base.CanConvertFrom(context, sourceType);
-        }
-
-        public override object ConvertFrom(ITypeDescriptorContext context, CultureInfo culture, object value)
-        {
-            if (value.GetType() == typeof(string))
-            {
-                return byte.Parse(value.ToString().Trim());
-            }
-
-            return base.ConvertFrom(context, culture, value);
-        }
-
-        public override bool GetStandardValuesSupported(ITypeDescriptorContext context)
-        {
-            return false;
-        }
-    }
-}
