@@ -1,30 +1,12 @@
-﻿using System;
-using System.ComponentModel;
-using System.Globalization;
-using FlatFile.FixedWidth.Interfaces;
+﻿using FlatFile.FixedWidth.Interfaces;
 
 namespace FlatFile.FixedWidth.Implementation.TypeConverters
 {
-    public class CharTypeConverter : TypeConverter, ITypeConverter
+    public class CharTypeConverter : ITypeConverter<char>
     {
-        public override bool CanConvertFrom(ITypeDescriptorContext context, Type sourceType)
+        public char ConvertFromString(string stringValue)
         {
-            return sourceType == typeof(string) || base.CanConvertFrom(context, sourceType);
-        }
-
-        public override object ConvertFrom(ITypeDescriptorContext context, CultureInfo culture, object value)
-        {
-            if (value.GetType() == typeof(string))
-            {
-                return char.Parse(value.ToString().Trim());
-            }
-
-            return base.ConvertFrom(context, culture, value);
-        }
-
-        public override bool GetStandardValuesSupported(ITypeDescriptorContext context)
-        {
-            return false;
+            return char.Parse(stringValue.Trim());
         }
     }
 }
