@@ -1,30 +1,13 @@
 ﻿using System;
-using System.ComponentModel;
-using System.Globalization;
 using FlatFile.FixedWidth.Interfaces;
 
 namespace FlatFile.FixedWidth.Implementation.TypeConverters
 {
-    public class DateTimeTypeConverter : TypeConverter, ITypeConverter
+    public class DateTimeTypeConverter : ITypeConverter<DateTime>
     {
-        public override bool CanConvertFrom(ITypeDescriptorContext context, Type sourceType)
+        public DateTime ConvertFromString(string stringValue)
         {
-            return sourceType == typeof(string) || base.CanConvertFrom(context, sourceType);
-        }
-
-        public override object ConvertFrom(ITypeDescriptorContext context, CultureInfo culture, object value)
-        {
-            if (value.GetType() == typeof(string))
-            {
-                return DateTime.Parse(value.ToString().Trim());
-            }
-
-            return base.ConvertFrom(context, culture, value);
-        }
-
-        public override bool GetStandardValuesSupported(ITypeDescriptorContext context)
-        {
-            return false;
+            return DateTime.Parse(stringValue.Trim());
         }
     }
 }
