@@ -1,19 +1,0 @@
-﻿using System;
-using System.ComponentModel;
-using FlatFile.FixedWidth.Interfaces;
-
-namespace FlatFile.FixedWidth.Implementation.TypeConverters
-{
-    public class NumericTypeConverterBase : TypeConverter, ITypeConverter
-    {
-        public override bool CanConvertFrom(ITypeDescriptorContext context, Type sourceType)
-        {
-            return sourceType == typeof(string) || base.CanConvertFrom(context, sourceType);
-        }
-
-        public override bool GetStandardValuesSupported(ITypeDescriptorContext context)
-        {
-            return false;
-        }
-    }
-}
