@@ -1,11 +1,8 @@
-﻿using System;
-using System.ComponentModel;
-using System.Globalization;
-using FlatFile.FixedWidth.Interfaces;
+﻿using FlatFile.FixedWidth.Interfaces;
 
 namespace FlatFile.FixedWidth.Implementation.TypeConverters
 {
-    public class StringTypeConverter : TypeConverter, ITypeConverter
+    public class StringTypeConverter : ITypeConverter<string>
     {
         private readonly bool trim;
 
@@ -14,24 +11,9 @@ namespace FlatFile.FixedWidth.Implementation.TypeConverters
             this.trim = trim;
         }
 
-        public override bool CanConvertFrom(ITypeDescriptorContext context, Type sourceType)
+        public string ConvertFromString(string stringValue)
         {
-            return sourceType == typeof(string) || base.CanConvertFrom(context, sourceType);
-        }
-
-        public override object ConvertFrom(ITypeDescriptorContext context, CultureInfo culture, object value)
-        {
-            if (value.GetType() == typeof(string))
-            {
-                return trim ? value.ToString().Trim() : value.ToString();
-            }
-
-            return base.ConvertFrom(context, culture, value);
-        }
-
-        public override bool GetStandardValuesSupported(ITypeDescriptorContext context)
-        {
-            return false;
+            return trim ? stringValue.Trim() : stringValue;
         }
     }
 }
